# snoop

./: .env  .gitignore  LICENSE  design.md  notes.md
apriquot/: cov.xml  pyproject.toml  ruff.toml  test_apriqueue.py
apriquot/logs/: apriquot.log.jsonl
apriquot/src/apriquot/: __init__.py  apriqueue.py  config.py  item.py  item_group.py  logging.py  ordered_enum.py
apriquot/tests/: test_apriqueue.py  test_logging.py  test_ordered_enum.py
backend/: pyproject.toml  ruff.toml
backend/snoop/common/: logging.py  singleton.py
backend/snoop/doop/: __init__.py  blob_store.py  chunk_store.py  chunker.py  compressor.py  key_value_store.py  metadb.py
backend/snoop/file_server/: server.py
backend/snoop/metadb/: manager.py  models.py
backend/snoop/proxy_server/: binary_data.db  websocket_server.py
backend/tests/: conftest.py  test_doop.py
backend/tests/test_doop/: conftest.py  test_blob_store.py  test_chunker.py  test_key_value_store.py
snoop/collection/http_proxy/: capture.py  run_proxy_server.py
snoop/common/: __init__.py  async_util.py
snoop/doop/: __init__.py  compressor.py  core.py  models.py
snoop/doop/key_value_store/: __init__.py  abc.py  dict_kv.py  hybrid_kv.py  lru_kv.py  redis_kv.py  sqlite_kv.py
snoop/http_db/: manager.py  models.py
tests/test_doop/: conftest.py  test_key_value_store.py
weasel/client/: main.py  weasel_demo.py
weasel/client/static/: index.html
weasel/client/static/weasel/: Logger.js  Storage.js  WeaselClient.js  WebSocketHandler.js  weasel.js
weasel/server/: pyproject.toml  test.db
weasel/server/logs/: weasel.log.jsonl  weasel.log.jsonl.1  weasel.log.jsonl.2
weasel/server/scripts/: run_server.py
weasel/server/src/weasel/: config.py  database.py  logging.py  main.py  main_old.py  models.py  schemas.py
